# locitorium

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/phase0/: dataset.jsonl
docs/: EXPERIMENTS.md  PRD.md  examples.md
docs/ADR/: 001.md  002.md
k8s/: README.md  locitorium.yaml
scripts/: aggregate_bench.py
src/locitorium/: cli.py  config.py
src/locitorium/api/: app.py
src/locitorium/api/static/: index.css  index.html
src/locitorium/clients/: llm.py  nominatim.py  ollama.py
src/locitorium/eval/: io.py  metrics.py
src/locitorium/models/: schema.py
src/locitorium/pipeline/: candidates.py  extractor.py  resolver.py  runner.py
src/locitorium/prompts/: extract.py  resolve.py
tests/: test_schema.py
tests/clients/: test_llm.py  test_nominatim.py  test_ollama.py
tests/eval/: test_metrics_topk.py
tests/pipeline/: test_extractor_filter.py  test_runner_deadline.py
