[project]
name = "locitorium"
version = "0.1.0"
description = "Grounded toponym resolution pipeline (Phase 0)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Yui Matsumura" }
]
keywords = ["geocoding", "toponym", "nominatim", "ollama", "entity-linking"]

dependencies = [
  "httpx>=0.27",
  "tenacity>=8.2",
  "pydantic>=2.6",
  "typer>=0.12",
]

[project.optional-dependencies]

[project.scripts]
locitorium = "locitorium.cli:app"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.uv]

dev-dependencies = [
  "pytest>=8.0",
  "pytest-httpx>=0.30",
  "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
addopts = "-q"
